# file-encryptor-tauri

./: package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: main.rs  utils.rs
src/lib/: Greet.svelte
