[package]
name = "file-encryptor-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0-beta.5"
tauri-plugin-dialog = "2.0.0-beta.5"
aes-gcm = "0.10.3"
anyhow = "1.0.82"
bincode = "1.3.3"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
typenum = "1.17.0"
